--- a/assets/src/styles/screen.scss
+++ b/assets/src/styles/screen.scss
@@ -1,3 +1,6 @@
+// Third party
+@import "node_modules/hamburgers/_sass/hamburgers/hamburgers.scss";
+
 // Basic blog styles
 @import "config";
 @import "reset";
