--- a/default.hbs
+++ b/default.hbs
@@ -32,9 +32,9 @@
 
 </head>
 
-<body class="sff {{body_class}}">
+<body class="{{body_class}}">
 
-  <div class="sff__wrapper">
+  <div class="wrapper">
     {{navigation}}
 
     {{{body}}}
@@ -50,15 +50,15 @@
     {
       "@context": "http://schema.org",
       "@type": "Organization",
-      "name": "Edinburgh SF/F",
-      "legalName": "Edinburgh SFF",
+      "name": "Shell Bryson",
+      "legalName": "Shell Thomas Bryson",
       "email": "shell@shellbryson.com",
-      "url": "https://edinburghsff.com",
-      "logo": "https://edinburghsff.com/assets/dist/images/icon.svg"
+      "url": "https://shellbryson.com",
+      "logo": "https://shellbryson.com/assets/dist/images/icon.svg"
     }
   </script>
 
-  <script src="{{asset "dist/scripts/sff.js"}}"></script>
+  <script src="{{asset "dist/scripts/sb.js"}}"></script>
   <script src="{{asset "dist/scripts/ghosthunter.js"}}"></script>
 
   {{!-- The #block helper will pull in data from the #contentFor other template files. In this case, there's some JavaScript which we only want to use in post.hbs, but it needs to be included down here, after jQuery has already loaded. --}}
