--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,25 +1,23 @@
 <nav class="navigation">
 
-  <div class="navigation__logo">
-    {{!-- <a class="navigation__logo-link" href="/">
-      <img src="{{@site.logo}}" alt="Edinburgh SF/F logo" />
-    </a> --}}
-  </div>
-
-  <div class="navigation__mobile">
-    <button class="navigation__toggle" aria-expanded="false" aria-owns="mz-navigation" aria-controls="mz-navigation" aria-haspopup="true" data-navigation-toggle>
-      <span class="sr-only">Toggle Navigation - Press Escape to close</span>
-      <span class="navigation__toggle-wrapper">
-        <span class="navigation__toggle-icon"></span>
-      </span>
-    </button>
+  <div class="navigation__actions">
+    <div class="left">Logo</div>
+    <div class="right">
+      <div class="navigation__mobile">
+        <button class="hamburger hamburger--spin" type="button">
+          <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+          </span>
+        </button>
+      </div>
+    </div>
   </div>
 
   <ul class="navigation__menu" data-navigation aria-hidden="false" role="menu">
 
     {{#foreach navigation}}
       <li class="navigation__entry" role="menuitem">
-        <a class="navigation__link {{#if current}} mz-navigation__link--active{{/if}}" href="{{url absolute="true"}}">{{label}}</a>
+        <a class="navigation__link {{#if current}} navigation__link--active{{/if}}" href="{{url absolute="true"}}">{{label}}</a>
       </li>
     {{/foreach}}
 
