feat(navigation): accessibility and styling + add burger

--- a/assets/src/styles/_colors.scss
+++ b/assets/src/styles/_colors.scss
@@ -1,6 +1,10 @@
 // Base colors
 $color-white: #ffffff;
 $color-black: #000000;
+
+$color-navigation-fg: $color-white;
+$color-navigation-bg: #191e26;
+
 // $color-body: #2d4277;
 $color-body-alternate: #494f62;
 $color-background-shade: #f7f7f7;
