--- a/assets/src/styles/screen.scss
+++ b/assets/src/styles/screen.scss
@@ -1,6 +1,3 @@
-// Third party
-@import "node_modules/hamburgers/_sass/hamburgers/hamburgers.scss";
-
 // Basic blog styles
 @import "config";
 @import "reset";
@@ -8,6 +5,10 @@
 @import "colors";
 @import "layout";
 @import "patterns";
+
+// Third party
+@import "hamburger-settings";
+@import "node_modules/hamburgers/_sass/hamburgers/hamburgers.scss";
 
 // Components
 @import "components/footer";
