--- a/assets/src/styles/_config.scss
+++ b/assets/src/styles/_config.scss
@@ -8,6 +8,12 @@ $base-font-bold: 'PT Sans', sans-serif;
 $base-font-medium: 'PT Sans', sans-serif;
 $base-font-heading: 'PT Sans Narrow', sans-serif;
 
+$base-font-heading-write: 'EB Garamond', serif;
+$base-font-body-write: 'EB Garamond', serif;
+
+$base-font-heading-code: 'Ubuntu Mono', monospace;
+$base-font-body-code: 'Ubuntu Mono', monospace;
+
 // ############################################################################
 // Typography
 // ############################################################################
