--- a/default.hbs
+++ b/default.hbs
@@ -9,8 +9,10 @@
   <meta name="theme-color" content="#ffffff">
 
   <title>{{meta_title}}</title>
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700|PT+Sans:400,400i,700&display=swap"
-  rel="stylesheet">  <style type="text/css">
+
+  <link href="https://fonts.googleapis.com/css?family=EB+Garamond|PT+Sans|Ubuntu+Mono&display=swap" rel="stylesheet">
+
+  <style type="text/css">
     .kg-width-wide {}
     .kg-width-full {}
     .kg-gallery-container {}
@@ -34,7 +36,7 @@
 
 <body class="{{body_class}}">
 
-  <div class="wrapper">
+  <div class="sb">
     {{navigation}}
 
     {{{body}}}
