--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,7 +1,5 @@
-<div class="sff__lane">
-  <div class="sff__single">
-    <footer class="sff__footer">
-      <p>Made with love in Scotland | Copyright &copy; {{date format="YYYY"}}</p>
-    </footer>
-  </div>
+<div class="lane">
+  <footer class="panel">
+    <p>Made with love in Scotland | Copyright &copy; {{date format="YYYY"}}</p>
+  </footer>
 </div>
