--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -2,7 +2,7 @@
 
   <div class="navigation__actions">
     <div class="left">
-      <div class="navigation__logo">Logo</div>
+      <div class="navigation__logo"><img src="{{asset 'dist/images/logo.svg'}}"></div>
       <div class="navigation__title">{{@site.title}}</div>
     </div>
     <div class="right">
