--- a/assets/src/styles/_layout.scss
+++ b/assets/src/styles/_layout.scss
@@ -47,6 +47,7 @@ body {
 .grid {
   display: grid;
   grid-template-columns: 1fr;
+  gap: 1rem;
 
   @include medium {
     grid-template-columns: 1fr 1fr;
@@ -57,15 +58,32 @@ body {
   padding: 1rem;
 }
 
-.card {
-  border: 1px solid red;
-}
-
 .code {
   background-color: $color-code-bg;
   font-family: "Courier New" !important;
+  transition: 1s;
+  opacity: 1;
 }
 
 .write {
   background-color: $color-write-bg;
+  transition: 1s;
+  opacity: 1;
+}
+
+.reveal {
+  padding-top: 2rem;
+  opacity: 0.5;
+
+  &--delay-1 {
+    transition-delay: 600ms;
+  }
+
+  &--delay-2 {
+    transition-delay: 700ms;
+  }
+
+  &--delay-3 {
+    transition-delay: 1000ms;
+  }
 }
