--- a/error-404.hbs
+++ b/error-404.hbs
@@ -1,26 +1,8 @@
 {{!< default}}
 
-<div class="wrapper">
-
-  {{navigation}}
-
-  <section class="lane">
-    <div class="lane__wrap">
-      <div class="lane__content">
-        <h2>404 - Page Missing</h2>
-        <h3>The page you are looking for has gone away. Sorry about that.</h3>
-      </div>
-    </div>
-  </section>
-
-  <div class="lane lane--spacer">
-    <div class="lane__wrap">
-      <div class="lane__content">
-        {{> contact}}
-      </div>
-    </div>
+<section class="lane">
+  <div class="panel">
+    <h2>404 - Page Missing</h2>
+    <h3>Uh oh. Maybe Shell moved it somewhere. Did you check behind to sofa?</h3>
   </div>
-
-  {{> latest-posts}}
-
-</div>
+</section>
