--- a/error-500.hbs
+++ b/error-500.hbs
@@ -1,26 +1,8 @@
 {{!< default}}
 
-<div class="wrapper">
-
-  {{navigation}}
-
-  <section class="lane">
-    <div class="lane__wrap">
-      <div class="lane__content">
-        <h2>500 - Error</h2>
-        <h3>Something went wrong serving this page. Sorry about that.</h3>
-      </div>
-    </div>
-  </section>
-
-  <div class="lane lane--spacer">
-    <div class="lane__wrap">
-      <div class="lane__content">
-        {{> contact}}
-      </div>
-    </div>
+<section class="lane">
+  <div class="panel">
+    <h2>500 - Borked</h2>
+    <h3>Something broke. Probably blame Shell.</h3>
   </div>
-
-  {{> latest-posts}}
-
-</div>
+</section>
