--- a/page.hbs
+++ b/page.hbs
@@ -1,16 +1,10 @@
 {{!< default}}
 
-<div class="sff__lane">
-  <div class="sff__single">
-      <div class="sff__panel">
-      {{#post}}
-        <div class="sff__content"></div>
-          <h1>{{title}}</h1>
-
-          {{content}}
-
-        {{/post}}
-        </div>
-    </div>
+<div class="lane">
+  <div class="panel">
+    {{#post}}
+      <h1>{{title}}</h1>
+      {{content}}
+    {{/post}}
   </div>
 </div>
