--- a/assets/src/styles/_layout.scss
+++ b/assets/src/styles/_layout.scss
@@ -11,8 +11,9 @@ body {
 
 .sb {
   display: block;
+  position: relative;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   overflow-x: hidden;
   max-width: 1400px;
   margin: 0 auto;
