--- a/assets/src/styles/components/_navigation.scss
+++ b/assets/src/styles/components/_navigation.scss
@@ -7,6 +7,7 @@
   display: block;
   width: 100%;
   position: fixed;
+  max-width: 1400px;
   top: 0;
   color: $color-navigation-fg;
   align-items: center;
@@ -31,7 +32,7 @@
 
   &__actions {
     display: flex;
-    padding: 0 1rem;
+    padding-left: 1rem;
     backdrop-filter: blur(4px);
     background-color: rgba($color-navigation-bg, 0.1);
   }
@@ -41,8 +42,6 @@
 
     .is-active & {
       display: block;
-      position: absolute;
-      margin-top: 2px;
       padding: 1rem 1rem 0 1rem;
       min-width: 200px;
       border: 1px solid $color-body;
@@ -51,8 +50,11 @@
       font-size: 18px;
       backdrop-filter: blur(4px);
 
-      @include small {
+      @include breakpoint(400px) {
+        position: absolute;
+        width: 200px;
         right: 1rem;
+        margin-top: 2px;
       }
     }
 
@@ -77,7 +79,6 @@
 
   .right {
     display: flex;
-    margin-right: -1rem;
   }
 }
 
