feat(home): links

--- a/home.hbs
+++ b/home.hbs
@@ -45,7 +45,9 @@
           {{/page}}
           {{/get}}
         </div>
-        <a href="/projects">More projects...</a>
+        <div class="panel__more">
+          <a href="/projects">More projects...</a>
+        </div>
       </div>
 
       <div class="panel">
@@ -57,7 +59,9 @@
           {{/post}}
           {{/get}}
         </div>
-        <a href="/code">More posts...</a>
+        <div class="panel__more">
+          <a href="/code" class="panel__more">More posts...</a>
+        </div>
       </div>
     </div>
 
@@ -85,7 +89,9 @@
           {{/post}}
           {{/get}}
         </div>
-        <a href="/writing">More posts...</a>
+        <div class="panel__more">
+          <a href="/writing" class="panel__more">More posts...</a>
+        </div>
       </div>
     </div>
 
