--- a/assets/src/styles/_layout.scss
+++ b/assets/src/styles/_layout.scss
@@ -17,7 +17,7 @@ body {
   overflow-x: hidden;
   max-width: 1400px;
   margin: 0 auto;
-  padding-top: 2rem;
+  padding-top: 3rem;
   background-color: $color-dark;
 }
 
@@ -59,6 +59,16 @@ body {
 
 .panel {
   padding: 1rem;
+
+  &__more {
+
+    a {
+      display: block;
+      padding: 1rem 0;
+      color: $color-light;
+      text-decoration: none;
+    }
+  }
 }
 
 .code {
@@ -79,14 +89,18 @@ body {
   opacity: 0.5;
 
   &--delay-1 {
-    transition-delay: 600ms;
+    transition-delay: 0;
   }
 
   &--delay-2 {
-    transition-delay: 700ms;
+    transition-delay: 250ms;
   }
 
   &--delay-3 {
-    transition-delay: 1000ms;
+    transition-delay: 500ms;
+  }
+
+  &--delay-4 {
+    transition-delay: 700ms;
   }
 }
