feat(templates): add blog template support

--- a/custom-code-blog.hbs
+++ b/custom-code-blog.hbs
@@ -4,7 +4,7 @@
   <div class="split-uneven">
     <div class="panel">
       {{#post}}
-      <h1>WRITING: {{title}}</h1>
+      <h1>CODE: {{title}}</h1>
       {{content}}
       {{/post}}
     </div>
