--- a/partials/card-code.hbs
+++ b/partials/card-code.hbs
@@ -1,4 +1,6 @@
 <div class="card card--code">
-  <h4>{{title}}</h4>
-  <p>{{excerpt}}</p>
+  <a href="blog/{{slug}}">
+    <h4>{{title}}</h4>
+    <p>{{excerpt}}</p>
+  </a>
 </div>
