--- a/assets/src/styles/_layout.scss
+++ b/assets/src/styles/_layout.scss
@@ -47,6 +47,21 @@ body {
   }
 }
 
+.split-uneven {
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 100%;
+  margin-top: 3rem;
+
+  @include small {
+    grid-template-columns: 2fr 1fr;
+  }
+
+  > div {
+    width: 100%;
+  }
+}
+
 .grid {
   display: grid;
   grid-template-columns: 1fr;
