--- a/partials/card-project.hbs
+++ b/partials/card-project.hbs
@@ -1,4 +1,6 @@
 <div class="card card--project">
-  <h4>{{title}}</h4>
-  <p>{{excerpt}}</p>
+  <a href="{{slug}}">
+    <h4>{{title}}</h4>
+    <p>{{excerpt}}</p>
+  </a>
 </div>
