--- a/partials/card-write.hbs
+++ b/partials/card-write.hbs
@@ -1,4 +1,6 @@
 <div class="card card--write">
-  <h4>{{title}}</h4>
-  <p>{{excerpt}}</p>
+  <a href="blog/{{slug}}">
+    <h4>{{title}}</h4>
+    <p>{{excerpt}}</p>
+  </a>
 </div>
