--- a/assets/src/styles/_layout.scss
+++ b/assets/src/styles/_layout.scss
@@ -12,12 +12,11 @@ body {
 .sb {
   display: block;
   position: relative;
-  min-height: 100vh;
   width: 100%;
   overflow-x: hidden;
   max-width: 1400px;
   margin: 0 auto;
-  padding-top: 3rem;
+  padding-top: 5rem;
   background-color: $color-dark;
 }
 
@@ -59,6 +58,13 @@ body {
 
   > div {
     width: 100%;
+  }
+}
+
+.sidebar {
+
+  @include small {
+    border-left: 2px dotted $color-black;
   }
 }
 
