feat(images): add image support to posts

--- a/assets/src/styles/_patterns.scss
+++ b/assets/src/styles/_patterns.scss
@@ -212,7 +212,15 @@ body {
 
 ul,
 ol {
+  font-size: 1.4rem;
   color: $color-body;
+}
+
+li {
+
+  &::before {
+    content: "\200B";
+  }
 }
 
 // ############################################################################
@@ -239,18 +247,6 @@ img {
     margin-left: auto;
     margin-right: auto;
     max-width: 200px!important;
-  }
-}
-
-// ############################################################################
-// Formatting
-// ############################################################################
-
-strong {
-
-  .lane__content & {
-
-    font-family: $base-font-bold;
   }
 }
 
@@ -369,19 +365,11 @@ a {
 }
 
 // ############################################################################
-// General content
-// ############################################################################
-
-strong {
-  font-weight: 600;
-}
-
-// ############################################################################
 // Videos
 // ############################################################################
 
 // Trick to maintain 16:9 ratio:
-.mz-video {
+.video {
   height: 0px;
   position: relative;
   margin: 1rem 0;
