--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,5 +1,9 @@
 <div class="lane">
-  <footer class="panel">
-    <p>Made with love in Scotland | Copyright &copy; {{date format="YYYY"}}</p>
+  <footer class="panel footer">
+    <p>Copyright &copy; Shell Bryson {{date format="YYYY"}}</p>
+    <p>Curious about this site? It's a hand-crafted <a href="/about">Ghost theme</a>.</p>
+    <a href="/">
+      <img class="footer__logo" src="{{asset 'dist/images/logo.svg'}}" alt="Shell Bryson logo image"></div>
+    </a>
   </footer>
 </div>
