--- a/assets/src/styles/_layout.scss
+++ b/assets/src/styles/_layout.scss
@@ -90,6 +90,21 @@ body {
       text-decoration: none;
     }
   }
+
+  .kg-image-card {
+    img {
+      display: block;
+      width: 60%;
+      max-width: 600px;
+      margin: 1rem auto;
+      border: 3px solid $color-black;
+
+      @include small {
+        width: 100%;
+      }
+    }
+  }
+
 }
 
 .code {
