feat(icons): favicons

--- a/default.hbs
+++ b/default.hbs
@@ -28,7 +28,7 @@
 
   <script src="{{asset "dist/scripts/moment.js"}}"></script>
 
-  <!-- Made in Scotland with ❤️ //-->
+  <!-- Shell made this with ❤️in Scotland //-->
 
   {{ghost_head}}
 
