feat(masthead): custom panel styling

--- a/assets/src/styles/_patterns.scss
+++ b/assets/src/styles/_patterns.scss
@@ -17,10 +17,18 @@ body {
 
 p {
   font-weight: 500;
-  font-size: 1.4rem;
+  font-size: 1.1rem;
   line-height: 1.38;
   color: $color-body;
   margin-bottom: 2rem;
+
+  @include small {
+    font-size: 1.2rem;
+  }
+
+  @include medium {
+    font-size: 1.4rem;
+  }
 
   &:last-child {
     margin-bottom: 0;
@@ -32,6 +40,11 @@ p {
 
   .write & {
     font-family: $base-font-heading-write;
+  }
+
+  // Modified
+  .panel--masthead & {
+    text-align: center;
   }
 }
 
@@ -92,6 +105,12 @@ h1 {
     font-size: 3rem;
     margin-bottom: 3rem;
     line-height: 1.05;
+  }
+
+  // Modified
+  .panel--masthead & {
+    margin-bottom: 1rem;
+    text-align: center;
   }
 }
 
