--- a/assets/src/styles/components/_card.scss
+++ b/assets/src/styles/components/_card.scss
@@ -1,17 +1,23 @@
 .card {
-  padding: 1rem;
+  padding: 0.5rem;
 
   h4 {
     margin-top: 0;
     margin-bottom: 0.5rem;
-    font-size: 1.2rem;
+    font-size: 1.15rem;
+  }
+
+  p {
+    font-size: 1.1rem;
   }
 
   .code & {
     background-color: rgba($color-light, 0.1);
+    border: 1px solid darken($color-dark, 1%);
   }
 
   .write & {
     background-color: darken($color-dark, 1%);
+    border: 1px solid rgba($color-light, 0.1);
   }
 }
