--- a/assets/src/styles/screen.scss
+++ b/assets/src/styles/screen.scss
@@ -15,3 +15,5 @@
 @import "components/navigation";
 @import "components/card";
 @import "components/sidebar-search";
+@import "components/grid";
+@import "components/sidebar";
