--- a/post.hbs
+++ b/post.hbs
@@ -2,7 +2,7 @@
 
 <div class="lane">
   <div class="split-uneven">
-    <div class="panel">
+    <div class="panel content">
       {{#post}}
       <h1>WRITING: {{title}}</h1>
       {{content}}
